--- a/src/pages/Restaurants.css
+++ b/src/pages/Restaurants.css
@@ -31,10 +31,8 @@ img {
     text-align: center;
 }
 
-.desc {
 
-    text-align: center;
-}
+
 
 .buttoninfo {
 
@@ -42,6 +40,7 @@ img {
     display: flex;
     justify-content: space-between;
     padding: 0 50px;
+    
 }
 
 .buttonmenu {
@@ -50,6 +49,9 @@ img {
     display: flex;
     justify-content: space-between;
     padding: 0 30px;
-    padding-top: 5px;
+    
+    padding-bottom: 50px;
 }
+
+
 
