--- a/src/pages/Restaurants.css
+++ b/src/pages/Restaurants.css
@@ -12,7 +12,7 @@ img {
 .cardsize {
 
     width: 175px;
-    height: 300px;
+    height: 310px;
     
 
     border-radius: 6%;
@@ -24,11 +24,19 @@ img {
     display: block;
     margin: 0 auto;
     text-align: center;
+    
 }
 
 .header {
 
    text-align: center;
+}
+
+.headerSmall {
+
+    padding-bottom: 20px;
+    padding-top: 5px;
+    text-align: center;
 }
 
 .stara {
@@ -49,21 +57,23 @@ img {
 .buttoninfo {
 
     border-radius: 10%;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 50px;
+    
+    margin: 0 60px;
+
+    margin-bottom: 5px;
     
 }
 
 .buttonmenu {
 
     border-radius: 10%;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 30px;
     
-    padding-bottom: 50px;
+    margin: 0 35px;
+    
+    
 }
+
+
 
 
 
