--- a/src/pages/Account/About.css
+++ b/src/pages/Account/About.css
@@ -7,4 +7,9 @@
     padding-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 20px;
+}
+
+.content {
+    background-color: white;
 }
