--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -20,3 +20,33 @@ img {
     font-size: 22px;
     padding-top: 30px;
 }
+
+   
+  .flex-container {
+    display: flex;
+    align-items: center;
+    width: 100%;
+  }
+  
+ 
+  .left-column {
+    flex: 1; 
+    margin-right: 10px;
+  }
+  
+  
+  .right-column {
+    flex: 3; 
+    
+  }
+  
+  
+  .left-column img {
+    margin-left: 10px;
+    border-radius: 8%; 
+  }
+
+  .starat {
+    font-size: small;
+    
+  }
