--- a/src/pages/Paymentmethod.css
+++ b/src/pages/Paymentmethod.css
@@ -10,3 +10,10 @@
 .div {
     background-color: white;
 }
+
+.cardbutton {
+    padding-top: 430px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
