--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -25,47 +25,9 @@ img {
 
 .home {
     text-align: center;
-    font-size: 22px;
-    padding-top: 30px;
+    
 }
 
-.flex-container {
-    display: flex;
-    align-items: center;
-    width: 100%;
-}
-
-.left-column {
-    flex: 1;
-    margin-right: 10px;
-}
-
-
-.right-column {
-    flex: 3;
-
-}
-
-.left-column img {
-    margin-left: 10px;
-    border-radius: 8%;
-}
-
-.starat {
-    font-size: small;
-
-}
-
-.title {
-    font-size: 25px;
-    padding-right: 64px;
-
-}
-
-.listitem {
-    border-top-right-radius: 10%;
-    border-bottom-right-radius: 10%;
-}
 
 .subtitle {
     padding-left: 10px;
@@ -78,10 +40,6 @@ img {
 .imageitem {
     border-bottom-left-radius: 15%;
     border-top-left-radius: 15%;
-}
-
-.rivi {
-    height: 10%;
 }
 
 .cardtitle {
@@ -98,6 +56,6 @@ img {
     width: fit-content;
 }
 
-.alaotsikko {
-    padding-left: 20px;
+.recommend {
+    text-align: center;
 }
