--- a/src/pages/login&register/Login.css
+++ b/src/pages/login&register/Login.css
@@ -4,11 +4,18 @@
   align-items: center;
   height: 100%;
 }
+
 p {
   display: flex;
   padding: 2px;
   justify-content: center;
 }
+
 #button {
   padding: 2px;
+}
+
+
+.cardtitle {
+  text-align: center;
 }
