--- a/src/pages/Checkout.css
+++ b/src/pages/Checkout.css
@@ -9,19 +9,24 @@
 
 .method {
     font-size: 20px;
-    padding-bottom: 10px;
     padding-top: 20px;
+}
+
+.cardtext {
+    font-size: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .address {
     font-size: 20px;
-    padding-bottom: 10px;
-    padding-top: 40px;
+    padding-bottom: 0px;
+    padding-top: 30px;
 }
 
 .options {
     font-size: 20px;
-    padding-top: 100px;
+    padding-top: 40px;
 }
 
 .change {
@@ -31,18 +36,18 @@
 }
 
 .card {
-    padding-left: 20px;
+    padding-right: 10px;
     font-size: 24px;
 }
 
 .home {
-    padding-left: 20px;
+    padding-right: 10px;
     font-size: 24px;
 }
 
 .toggle {
-    padding-top: 100px;
-    padding-bottom: 120px;
+    padding-top: 80px;
+    padding-bottom: 100px;
     font-size: 20px;
 }
 
@@ -78,4 +83,19 @@
     width: 400px;
     height: 50px;
     font-size: large;
+}
+
+.carditem {
+    padding-bottom: 10px;
+    background-color: white;
+}
+
+.cardform {
+    padding-left: 15px;
+    background-color: white;
+}
+
+.addressrow {
+    padding-top: 20px;
+    background-color: white;
 }
